--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
 </head>
 <body>
+	<div class="container">
 	<h1>Hello</h1>
-	<img src="snare.png">
+	<img class="logo" src="snare.png">
+	</div>
 </body>
 </html>
